# firestarr-tbd

./: .dockerignore  .env  .gitignore  .gitmodules  ORIGIN.md  README.md  config  docker-compose.yml  doxygen.conf  fire.cpp  fire.sln  fire.vcxproj  fire.vcxproj.filters  probability.qml  probability.sld  rebuild.sh  settings.ini  source.r  test_gh_actions.sh
.docker/: Dockerfile_db  Dockerfile_firestarr  Dockerfile_gis  Dockerfile_gui  Dockerfile_tbd  Dockerfile_wxcli  crontab  requirements_firestarr.txt  requirements_gis.txt  requirements_tbd.txt  requirements_wxcli.txt
.github/workflows/: build_test_publish.yml  docker-compose.yml  doxygen.yml  main.yml  manual.yml
FireSTARR/: .clang-format  .gitignore  .vsconfig  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmakeclean.sh  compare.sh  dotest.bat  firestarr.conf  firestarr.py  firestarr.vcxproj  firestarr.vcxproj.filters  firestarr_gis.py  get_fgmj.py  make.bat  run.bat  runfake.bat  runfake.py  runfire.py  settings.ini  test.sh  update.sh
FireSTARR/firestarr/: Scenario.py  Settings.py  assets.py  firestarr.py  getFuelMXD.py  getWxshield.py  mxd.py  pdf.py
FireSTARR/setup/: setup.bat
FireSTARR/source/r/: source.r
FireSTARR/src/: Cell.h  ConstantGrid.h  ConvexHull.cpp  ConvexHull.h  Database.cpp  Database.h  Duff.cpp  Duff.h  Environment.cpp  Environment.h  EnvironmentInfo.cpp  EnvironmentInfo.h  Event.h  EventCompare.h  FBP45.cpp  FBP45.h  FWI.cpp  FWI.h  FireSpread.cpp  FireSpread.h  FireWeather.cpp  FireWeather.h  FuelLookup.cpp  FuelLookup.h  FuelType.cpp  FuelType.h  FwiStream.cpp  FwiStream.h  Grid.cpp  Grid.h  GridMap.h  Index.h  InnerPos.h  IntensityMap.cpp  IntensityMap.h  Iteration.cpp  Iteration.h  Location.h  Log.cpp  Log.h  (+49 more)
FireSTARR/www/: betterWMS.js  index.php
GIS/: README.md  collect.py  earthenv.py  fixWater.py  gis.conf  make_grids.py  nhn.py  rampart.py  shared.py  util.py
GIS/canvec/: canvec.py  config.py  log.py  unpack.py  util.py
GIS/dem/: config.ini  config.py  getDem.py  merge.py  shared.py  unpack.py
GIS/grids/: Settings.py  collect.py  earthenv.py  make_grids.py  shared.py
TBD/: CMakeLists.txt  col.txt  compare.sh  get_fgmj.py  gis.py  make_hist.R  run.R  settings.ini  tbd.conf  tbd.py  test.sh
TBD/src/: Cell.h  ConvexHull.cpp  Duff.h  Environment.cpp  Environment.h  EnvironmentInfo.h  EventCompare.h  FBP45.h  FWI.h  FuelLookup.h  Grid.cpp  Grid.h  InnerPos.h  IntensityMap.h  Iteration.h  Location.h  Log.h  Model.cpp  Model.h  Perimeter.h  SafeVector.cpp  SafeVector.h  Scenario.cpp  Settings.cpp  Statistics.h  Test.cpp  Test.h  TimeUtil.cpp  (+3 more)
WeatherSHIELD/: fpaloader.py  gepsloader.py  gethistoric.py  getscores.py  gribloader.py  load_previous.py  reanalysis1.py  repsloader.py  sst.py  update.py  update.sh  weatherloader.py  weathershield.conf
documentation/: doxygen.conf  fireguard.conf  fix_docs.sh  main.conf  make.sh
fire/: .gitignore  README.md  fire.vcxproj  fire.vcxproj.filters
gis/: README.md  collect.py  earthenv.py  fbp_mosaic.py  gis.conf  init.sh  make_grids.py  nhn.py  setup.bat
pyfire/: main.py  requirements.txt
setup/: docker_setup.bat  docker_setup.sh  setup.bat
src/: main.cpp
tbd/: .Makefile.swp  .clang-format  .gitignore  .vsconfig  CMakeLists.txt  bounds.geojson  compare.sh  fuel.lut  geoserver_setup.sh  get_fgmj.py  gis.py  main.py  make_bounds.py  publish.py  publish_azure.py  publish_geoserver.py  publish_geoserver.sh  settings.ini  tbd.conf  tbd.py  tbd.sln  test.sh  test_debug.sh  test_hourly.sh  test_release.sh  update.sh  vcpkg.json
tbd/scripts/: archive_sims.sh  build.sh  calc_all_times.sh  calc_count_sims.sh  calc_done_times.sh  calc_max_time.sh  calc_running_times.sh  calc_stats.sh  calc_time.sh  calc_wx.sh  calc_wx_stats.sh  call_update.sh  check_and_publish.sh  check_geps.sh  check_wx.sh  find_no_perims.sh  fix_file.sh  force_run.sh  lock_merge.sh  lock_publish.sh  lock_run.sh  lock_update.sh  m.sh  merge_folders.sh  merge_inputs.sh  mk_clean.sh  pkg.sh  profile.sh  publish_geoserver.sh  run_docker_bash.sh  show_running.sh  show_wx_stats.sh  t.sh  tests.sh  update.sh  with_lock_publish.sh  with_lock_update.sh
tbd/source/r/: source.r
tbd/src/: Cell.h  ConstantGrid.h  ConvexHull.cpp  ConvexHull.h  Duff.cpp  Duff.h  Environment.cpp  Environment.h  EnvironmentInfo.cpp  Event.h  FBP45.cpp  FBP45.h  FWI.cpp  FWI.h  FireSpread.cpp  FireSpread.h  FireWeather.cpp  FireWeather.h  FireWeatherDaily.cpp  FuelLookup.cpp  FuelLookup.h  FuelType.h  Grid.cpp  Grid.h  GridMap.h  Index.h  IntensityMap.cpp  Iteration.cpp  Iteration.h  Location.h  Log.cpp  Log.h  LookupTable.h  Main.cpp  MemoryPool.h  Model.cpp  Model.h  Observer.cpp  Perimeter.cpp  Perimeter.h  (+23 more)
tbd/src/cpp/: Cell.h  CellPoints.cpp  CellPoints.h  ConstantGrid.h  ConstantWeather.h  ConvexHull.cpp  ConvexHull.h  Duff.cpp  Duff.h  Environment.cpp  Environment.h  EnvironmentInfo.cpp  EnvironmentInfo.h  Event.h  EventCompare.h  FBP45.cpp  FBP45.h  FWI.cpp  FWI.h  FireSpread.cpp  FireSpread.h  FireWeather.cpp  FireWeather.h  FireWeatherDaily.cpp  FireWeatherDaily.h  FuelLookup.cpp  FuelLookup.h  FuelType.cpp  FuelType.h  Grid.cpp  Grid.h  GridMap.h  Index.h  InnerPos.cpp  InnerPos.h  IntensityMap.cpp  IntensityMap.h  Iteration.cpp  Iteration.h  Location.cpp  (+56 more)
tbd/src/py/firestarr/: agency.py  azurebatch.py  check_and_publish.py  common.py  fires.py  fix_arcgis.py  gdal_merge_max.py  gis.py  log.py  main.py  make_bounds.py  model_data.py  net.py  publish.py  publish_azure.py  publish_geoserver.py  redundancy.py  run.py  simulation.py  tbd.py  testing.py  tqdm_pool.py  tqdm_util.py  undelete.py
tbd/src/py/firestarr/azurebatch/: batch_container.py  config.py
tbd/src/py/firestarr/datasources/: base.py  cwfis.py  datatypes.py  default.py  spotwx.py
tbd/src/py/firestarr/datasources/public/: agency_on.py
tbd/test/: wx.csv  wx_hourly_in.csv
tbd/validate/: calc_fbp.R
tbd/validate/example/: fire.geojson  fuel.lut  settings.ini  sim.sh  wx.csv
tbd/www/: index.php
util/: common.py  db.py  gdal_merge_max.py  log.py  model_data.py  server.py  tqdm_pool.py  wgrib2.py
(+37 files in other folders)
